--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "author": "@itznotabug",
   "dependencies": {
     "@tryghost/admin-api": "^1.13.11",
+    "axios": "^1.0.0",
     "ejs": "3.1.9",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.5",
     "winston": "^3.11.0"
   }
