--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "main": "app.js",
   "type": "module",
   "author": "@itznotabug",
+  "scripts": {
+    "dev": "nodemon -e ejs app.js",
+    "buildcss": "npx tailwindcss -i ./public/styles/tailwind.css -o ./public/styles/style.css --minify"
+  },
   "dependencies": {
     "@tryghost/admin-api": "^1.13.11",
     "ejs": "3.1.9",
@@ -15,5 +19,9 @@
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.5",
     "winston": "^3.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "tailwindcss": "^3.4.0"
   }
 }
