--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   },
   "dependencies": {
     "@tryghost/admin-api": "^1.13.11",
+    "cheerio": "^1.0.0-rc.12",
     "ejs": "3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "he": "^1.2.0",
+    "html-minifier": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.5",
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "nodemon": "^3.0.2",
     "tailwindcss": "^3.4.0"
   }
