--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@tryghost/admin-api": "^1.13.11",
     "cheerio": "^1.0.0-rc.12",
+    "cookie-session": "^2.0.0",
     "css-inline": "^0.11.2",
     "ejs": "3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "he": "^1.2.0",
     "html-minifier": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
