--- a/configuration/config.production.json
+++ b/configuration/config.production.json
@@ -5,7 +5,8 @@
     "auth": {
       "user": "ghosler",
       "pass": "21232f297a57a5a743894a0e4a801fc3"
-    }
+    },
+    "docker": true
   },
   "ghost": {
     "url": "",
