update: default `config.production.json` file with new schema.

--- a/configuration/config.production.json
+++ b/configuration/config.production.json
@@ -24,5 +24,8 @@
     "show_powered_by_ghosler": true,
     "track_links": true
   },
+  "custom_template": {
+    "enabled": false
+  },
   "mail": []
 }
