--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "main": "app.js",
   "type": "module",
   "author": "@itznotabug",
+  "prettier": {
+    "tabWidth": 4,
+    "singleQuote": true
+  },
   "scripts": {
+    "lint": "prettier . --check",
+    "format": "prettier . --write",
     "dev": "nodemon -e js,ejs --ignore custom-template.ejs app.js",
     "cleanstart": "npm run buildcss && npm run dev",
     "buildcss": "npx tailwindcss -i ./public/styles/tailwind.css -o ./public/styles/style.css --minify"
@@ -28,9 +34,10 @@
     "winston": "^3.13.0"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.35",
     "nodemon": "^3.1.0",
+    "prettier": "^3.3.0",
     "tailwindcss": "^3.4.1",
+    "@types/cheerio": "^0.22.35",
     "@types/express-fileupload": "^1.5.0"
   }
 }
